--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <META name="Author" content="Yann Foucard">
 <link rel="shortcut icon" href="images/favicon.ico" />
 <link rel="icon" type="image/ico" href="images/favicon.ico">
+<link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
 
